# libTorchEx

./: .gitignore  CMakeLists.txt  main.cpp  resnet.py
